--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-routing": "^2.11.0"
+		"svelte-routing": "^2.11.0",
+		"vercel": "^33.5.2"
 	}
 }
