--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"18": "^0.0.0",
+		"node": "^20.16.0",
 		"svelte-routing": "^2.11.0",
 		"vercel": "^33.5.2"
 	}
