--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"type": "module",
 	"dependencies": {
 		"18": "^0.0.0",
-		"node": "^20.16.0",
+		"node": "https://registry.npmjs.org/node/-/node-18.20.4.tgz",
 		"svelte-routing": "^2.11.0",
 		"vercel": "^33.5.2"
 	}
