--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"node": "18.20.4"
 	},
 	"type": "module",
 	"dependencies": {
